[package]
name = "pidgin-extensions"
description = "Embedded deno_core JavaScript extension plane for pidgin (off-thread !Send runtime host)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# V8 is heavy and its prebuilt static blob is downloaded from GitHub release
# assets on first build. That download 403s through the sandbox egress proxy, so
# building `deno_core` is impossible in-sandbox. Keep it OFF by default: the
# default build (and therefore `cargo build/test --workspace`) stays V8-free and
# locally buildable in every session. The real runtime is compiled and tested
# only under `--features deno`, which CI exercises in a dedicated job
# (.github/workflows/pidgin-extensions.yml) where the blob download succeeds.
default = []
deno = [
    "dep:anyhow",
    "dep:deno_core",
    "dep:deno_ast",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "dep:pidgin-coding",
    "dep:pidgin-agent",
    "dep:pidgin-ai",
]
# The PyO3-backed Python extension engine — the offline sibling of the `deno`
# engine. Unlike V8, libpython is present in every sandbox, so this feature
# BUILDS and TESTS in-session (CI exercises it too). It EMBEDS CPython via PyO3's
# `auto-initialize` (links libpython, inits the interpreter on first
# `Python::with_gil`); it deliberately does NOT use `extension-module`/`abi3`
# (those suppress libpython linking, which an embedder needs). Mirrors the
# non-V8 deps of the `deno` list so both engines share the engine-neutral
# Inventory -> Registry core; `default` stays empty.
python = [
    "dep:pyo3",
    "dep:pidgin-coding",
    "dep:pidgin-agent",
    "dep:pidgin-ai",
    "dep:serde",
    "dep:serde_json",
    "dep:anyhow",
]

[dependencies]
anyhow = { workspace = true, optional = true }
# Pinned exact to match the throwaway/deno-hello spike. Optional + gated behind
# the `deno` feature so the workspace never pulls V8 by default.
deno_core = { version = "=0.408.0", optional = true }
# TypeScript -> JavaScript transpile (type-stripping), mirroring what jiti does
# at runtime for pi's `.ts` extensions. Same exact pin as the spike.
deno_ast = { version = "=0.53.3", features = ["transpiling"], optional = true }
# The PyO3-backed Python extension engine (`python` feature). `auto-initialize`
# EMBEDS CPython: it links libpython and initializes the interpreter on the first
# `Python::with_gil`. Optional + gated behind `python` so the default build never
# links libpython. NOT `extension-module`/`abi3` — those are for the separate
# `bindings/python` cdylib and suppress libpython linking an embedder requires;
# they never build together (different crates), so there is no conflict.
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { version = "1", optional = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
# The registration bindings lower JS registrations onto pidgin-coding's
# Registry / ToolDefinition / Command / Hook types. This does NOT create a
# cycle: pidgin-coding never depends on pidgin-extensions. Gated behind `deno`
# alongside the rest of the runtime, since only the gated code uses it — the
# default (no-feature) crate stays empty and V8-free.
pidgin-coding = { path = "../pidgin-coding", optional = true }
# The `ExtensionRunner` seam's `RegisteredTool { tool: ToolDefinition, .. }`
# carries a `ToolDefinition` whose `execute` returns an `pidgin_agent`
# `AgentToolResult`; the runner impl synthesizes those when lowering the
# Inventory's tool records. Gated behind `deno` alongside the rest of the impl.
pidgin-agent = { path = "../pidgin-agent", optional = true }
# The concrete `ExtensionOAuthLogin` seam impl (oauth_login_impl.rs) implements
# pidgin-ai's trait and maps to its `OAuthCredential` / `AuthFlowError`. NO cycle:
# pidgin-ai depends only downward (pidgin-model-catalog), never on pidgin-coding
# or pidgin-extensions. Optional + gated behind `deno` alongside the rest of the
# impl, so the default (no-feature) crate stays empty and V8-free.
pidgin-ai = { path = "../pidgin-ai", optional = true }

[dev-dependencies]
# The `deno`-gated integration tests (tests/deno_extensions.rs) drive the async
# JsPlaneHandle API and so need a tokio test runtime. Non-optional so `cargo
# test` resolves it; it pulls no V8 and the test file itself is cfg'd out when
# the `deno` feature is off, so the default test build stays V8-free.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# The `deno`-gated runner-impl tests mock the seam's `SessionContextHost`, whose
# `get_signal` returns an `pidgin_ai::seams::AbortSignal`. A plain (non-optional)
# dev dep so the test can name it; it is V8-free, and the test file is cfg'd out
# without the `deno` feature, so the default test build stays V8-free.
pidgin-ai = { path = "../pidgin-ai" }
# The `deno`-gated resource-loader acceptance tests (tests/deno_resource_loader.rs)
# build real on-disk extension trees in a temp dir. Cfg'd out without the feature,
# so the default test build never pulls it.
tempfile = "3"
# Shared filesystem/path test-fixture helpers (canonical/join/write/mkdir/
# symlink_dir), previously copied into `tests/common/mod.rs` from
# `crates/pidgin-coding/tests/common/mod.rs`. Now shared across the crate
# boundary via this dev-only crate. Dev-only.
pidgin-testkit = { path = "../pidgin-testkit" }
