[package]
name = "pidgin-napi"
description = "Node-API (napi-rs) cdylib bridging the pidgin engine into JavaScript."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pidgin-agent = { path = "../pidgin-agent" }
pidgin-ai = { path = "../pidgin-ai" }
pidgin-coding = { path = "../pidgin-coding" }
pidgin-tui = { path = "../pidgin-tui" }
indexmap = { version = "2", features = ["serde"] }
napi = { version = "2", default-features = false, features = ["napi9"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
# The exec-tool run layer (ls/write/bash) is async (tokio). The tool bindings
# drive it to completion with `block_on` on a dedicated multi-thread runtime;
# napi calls arrive on node's thread with no ambient tokio runtime, so a direct
# `block_on` does not hit the nested-runtime panic.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }

[build-dependencies]
napi-build = "2"

[dev-dependencies]
# Exhaustive model checker used by the in-crate `#[cfg(test)] mod
# bridge_async::stateright_bridge` to drive the real `BridgeShared` registry
# over every reachable transition (see that module).
stateright = "0.31"
